--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.24.2
   cloud_firestore: ^4.14.0
   intl: ^0.19.0
+  image_picker: ^1.1.1
 
 dev_dependencies:
   flutter_test:
